# hyperbolic-cross-branch-consistency

./: README.md  pyproject.toml
config/: baseline.yaml  create_db.yaml
config/methods/: cdann.yaml  ce.yaml  coral.yaml  dann.yaml  dist.yaml  gdro.yaml  irm.yaml  mmd.yaml  vrex.yaml
hypcbc/: helper.py  main.py  preprocessing.py
hypcbc/config/: base.py  data.py  experiment.py  manager.py  model.py  optimizer.py  trainer.py
hypcbc/data/: data.py  databuilder.py  registry.py  transformbuilder.py
hypcbc/dataset/: Camelyon.py  Database.py  Fitzpatrick.py  Retina.py  _augmented.py
hypcbc/hyptorch/: hyper_nets.py  nn.py
hypcbc/model/: _backbone.py  loss.py  model.py  registry.py  trainer.py
